# jsonify

./: .gitignore  MANIFEST.in  README.md  blah.bloah  config.ini  pyproject.toml  setup.py
src/jsonify/: __init__.py  api.py  config.py  config_loader.py  main.py
src/jsonify.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/jsonify/converter/: csv_converter.py  python_converter.py  xslt_converter.py
src/jsonify/info/: summary.txt
src/jsonifyer/: api.py  main.py
src/jsonifyer/converter/: csv_converter.py  python_converter.py  xslt_converter.py
test/: test_csv_conversion.py  test_txt_conversion.py  test_xml_conversion.py
test/input/: sample_data.csv  sample_data.txt  sample_data.xml
test/output/csv_results/: record_2.json  record_3.json
test/output/xml_results/: complex_mapping.json  field_mapping.json  full_conversion.json  specific_fields.json
tests/: conversion_xslt.xslt  debug_xslt_output.json  test_converter.py  test_converter_medfiles.py  test_converter_vulcanoes.py
tests/input/csv_files/: test.csv  vulcanoes.csv
tests/input/text_files/: vulcanoes.txt
tests/input/txt_files/: test.txt
tests/input/xml_files/: test.xml  vulcanoes.xml
tests/logs/: missing_fields_log.txt  names.txt  summary.txt
tests/output/csv_files/: record_1.json  record_2.json  record_3.json  record_4.json
tests/output/csv_results/: record_1.json
tests/output/text_files/: record_1.json  record_2.json  record_3.json  record_4.json
tests/output/txt_results/: record_1.json  record_2.json
tests/output/xml_files/: 0017a82d-4f35-4d17-ab5c-4744dc0effdd_auto.json  (+6 more)
(+11 files in other folders)
